# ai-corp

./: .gitignore  AI_CORP_ARCHITECTURE.md  BUSINESS_MODEL.md  CLAUDE.md  CLI.md  FRONTEND_DESIGN_SPEC.md  IDEAS.md  INTEGRATIONS_DESIGN.md  LEARNING_SYSTEM_DESIGN.md  LICENSE  NEURAL_GLASS_UI.md  PLAN_SUCCESS_CONTRACT_AND_MONITORING.md  PLATFORM_ARCHITECTURE.md  PRESET_FACTORIES_DESIGN.md  README (1).md  README.md  ROADMAP.md  ROUND2_CONCEPT_A_NEURAL_GLASS_ENHANCED.md  SESSION_PROMPT.md  SESSION_SUMMARY_AND_INTEGRATION_PLAN.md  STATE.md  VISION.md  WORKFLOW.md  claude-code-skills-research.md  pyproject.toml
corp/beads/: BEAD-04D5412A7333.yaml  BEAD-13AD1BDBC9AE.yaml  BEAD-1CC69C5C0734.yaml  BEAD-203649771DA1.yaml  BEAD-3041D7B95840.yaml  BEAD-69F1C4543576.yaml  BEAD-6CAD8889FA75.yaml  BEAD-6F5ADB356B50.yaml  BEAD-7CB247957B4A.yaml  BEAD-846A62CAC458.yaml  BEAD-8E14470D21CA.yaml  BEAD-964673CBBA69.yaml  BEAD-9B71A7DCBB6C.yaml  BEAD-A5E73D10F29B.yaml  BEAD-C6B194385513.yaml  BEAD-D46E30D408F0.yaml  BEAD-E5654678D1CA.yaml  BEAD-E68A35BD84C2.yaml  BEAD-EC4DE53B19D4.yaml  BEAD-EC81CC0C3096.yaml  ledger.yaml
corp/gates/: GATE-2E608EDD.yaml  GATE-8FA11D07.yaml  GATE-AF245AD1.yaml  GATE-D38C08AB.yaml  GATE-DC246FFC.yaml
corp/hooks/: HOOK-293B9F9E.yaml  HOOK-6CDFDBD9.yaml  HOOK-AFFF188F.yaml  HOOK-DBE1539D.yaml  (+2 more)
docs/: COO_INTERFACE_DESIGN.md  FRONTEND_BACKEND_GAP_ANALYSIS.md
foundation/: CLAUDE.md  DOGFOODING.md  README.md
frontend/: package-lock.json  package.json  vite.config.ts
scripts/: demo.py  test_delegation.py
tests/: __init__.py  conftest.py
(+210 files in other folders)
